------------------------------------------------------------------------
r1935 | dahnke | 2022-01-28 13:47:45

Changed paths:
M       CHANGES.txt
M       cat_conf_tools.m
M       cat_long_main.m
A       cat_long_report.m
M       cat_main_reportcmd.m
M       cat_main_reportfig.m
M       cat_main_reportstr.m
M       cat_main_updateSPM.m
M       cat_main_updateSPM1639.m
A       cat_plot_glassbrain.m
M       cat_run.m
M       cat_run_job.m
M       cat_run_job1639.m
M       cat_run_job_APRGs.m
M       cat_stat_check_cov.m
M       cat_surf_createCS.m
M       cat_surf_display.m
M       cat_vol_groupwise_ls.m
M       cat_vol_headtrimming.m
M       cat_vol_qa.m
M       cat_vol_series_align.m
M       html/cat.html
M       html/cat_methods.html
M       html/cat_methods_LP.html
M       html/cat_methods_affreg.html
A       html/cat_methods_catlongreport.html
A       html/images/cat_long_report_plasticity-aging_ADNI011S0003.jpg
A       html/images/cat_long_report_scannerdifferences_ADNI002S0559.jpg
A       html/images/catlongreportj_mwp1r.jpg

(1) New:      Added first prototype of a longitudinal report to cat_conf_tools and 
              cat_long_main. This also includes all updates in cat_main_reportfig,
              cat_main_reportstr and cat_plot_glassbrain. Included also a HTML help
              page.
(2) New:      Added SANLM filter, timing, intensity scaling, and file renaming batches 
              before SPM long processing in cat_long_main (on the top) that also include 
              different batch dependencies settings. Added refined SPM preprocessing
              settings to cat_run in case of job.extopts.new_release.
(3) Fixed:    Corrected WMHC and LAS parameter settings in the longitudinal average case
              in cat_long_main to avoid double corrections.
(4) Fixed:    Corrected bugs in cat_main_reportcmd and cat_vol_qa.              
(5) Fixed:    Corrected bug in the brain-masking in case of internally interpolated 